# tools

./: .gitignore  AGENTS.md  LICENSE  README.md  cross_verify_frames.py  entropy_scanner.py  media_carver.py  media_classifier.py
.github/: pull_request_template.md
docs/: recovery-guide.md  workflow-sd-card-recovery.md
docs/scripts/: _template.md  cross_verify_frames.md  enacom_mcp.md  entropy_scanner.md  lmstudio_claude_bridge.md  local_llm_mcp.md  media_carver.md  media_classifier.md  openclaw_local_gateway.md  openhands_lmstudio.md
enacom_mcp/: .env.example  README.md  __main__.py  hertz.py  pyproject.toml  selectors.py  tracker.py
enacom_mcp/scripts/: make_tracker.py
enacom_mcp/src/enacom_mcp/: __init__.py  server.py
lmstudio_claude_bridge/: README.md  bridge.mjs  claude-3p-provider.example.json  models.fixture.json  run_claude_with_lmstudio.sh
local_llm_mcp/: README.md  claude_desktop_config.example.json  pyproject.toml
local_llm_mcp/src/local_llm_mcp/: __init__.py  __main__.py  config.py  mode.py  server.py
scripts/: README.md  install-to-bin.sh  run_openclaw_local_gateway.sh  run_openhands_with_lmstudio.sh
tests/enacom_mcp/: test_tracker.py
tests/local_llm_mcp/: test_mode.py
tests/media_carver/: README.md  test_cli_modes.py  test_cross_verify_frames.py  test_cross_verify_manifest_selection.py  test_format_heuristics.py  test_media_classifier.py  test_validate_jpeg.py
tests/media_carver/fixtures/: pixel_1x1.jpg.b64  pixel_1x1.png.b64
